# resourceez

./: .gitignore  README.md  main.py  pyproject.toml  rest_utils.py
client/: client_builder.py
resourceez/: api_object.py
test/: test.py
tests/: test.py
util/: debug_utils.py
