[tool.poetry]
name = "resourceez-tjweldon"
version = "0.1.0"
description = "A slim package for declaratively expressing, serialising and deserialising REST resources."
long_description = file: README.md
long_description_content_type = text/markdown
authors = ["tjweldon <tomd90@gmail.com>"]
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
